--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <body>
     Students:
     <ul id="studentList"></ul>
+    Navn:<input type="text" id="inputN"><br>
+    Epost:<input type="text" id="inputE"><br>
+    <button id="knappInput">Legg til</button>
     <script>
       require('@babel/register');
       require('./index.js');
